added explanation comment for JVM options